services/wstunnel/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wstunnel
spec:
  ipFamilies:
  - IPv4
  externalIPs:
    - '78.46.254.0'
  ports:
    - protocol: TCP
      port: 443
      targetPort: 8084
      name: http
    - protocol: UDP
      port: 443
      targetPort: 8084
      name: webtransport
  externalTrafficPolicy: Local
  type: LoadBalancer
